public/main.css
body {
    margin: 0px;
    max-height: 100vh;
    -webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body::-webkit-scrollbar {
    width: 5px;
}
 
body::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}
 
body::-webkit-scrollbar-thumb {
  background-color: #445a64;
  outline: 1px solid slategrey;
}

/* Fonts */

.ssp-200 {
    font-family: 'Source Sans Pro';
    font-weight: 200;
}

.ssp-300 {
    font-family: 'Source Sans Pro';
    font-weight: 300;
}

.ssp-400 {
    font-family: 'Source Sans Pro';
    font-weight: 400;
}

.ssp-600 {
    font-family: 'Source Sans Pro';
    font-weight: 600;
}

.ssp-700 {
    font-family: 'Source Sans Pro';
    font-weight: 700;
}

.ssp-900 {
    font-family: 'Source Sans Pro';
    font-weight: 900;
}

.layout {
    min-height: 99vh;
    display: flex;
    position: relative;
}

.sidenav {
    width: 20.5vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 30px 10px 30px 10px;
    position: fixed;
    left: -4px;
    top: 0px;
    border: 1px solid red;
}

.home-comp {
    background-color: #eceff1;
    width: 78vw;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    position: absolute;
    right: 0px;
}

.home-con {
    width: 99%;
    min-height: 80vh;
    display: flex;
    position: 'relative';
}

.home-con-left {
    width: 67%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
    left: 0px;
    min-height: 70%;
    padding-top: 40px;
    padding-left: 25px;
}

.home-con-right {
    width: 25%;
    position: fixed;
    right: 0px;
    top: 0px;
    height: 100%;
    padding-top: 40px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.search-bar {
    height: 40px;
    width: 90%;
}

.search-input {
    height: 36px;
    width: 90%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    border-radius: 500px;
    box-shadow: 0px;
    border: 0px;
    background-color: #fafafa;
    padding-left: 10px;
    font-size: 15px;
    color: #263238;
}

.search-input:focus {
    outline: none;
}

.search-input::placeholder {
    color: #90a4ae;
}

.profile-box {
    margin-top: 60px;
    width: 90%;
    height: 150px;
    padding-left: 5px;
}

.img-container {
    height: 60px;
    width: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile-name {
    font-size: 20px;
    margin: 16px 0px 4px 5px;
    color:#263238;
}

.profile-profession {
    font-size: 15px;
    color: #90a4ae;
    margin-left: 5px;
}

.navitems-container {
    width: 105%;
    min-height: 400px;
}

.nav-item {
    height: 40px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: 8px 0px;
    border-left: 4px solid white;
}

.nav-item-icon {
    height: 100%;
    width: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-item-text {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;    
}

.nav-item:hover {
    border-left: 4px solid #90a4ae;
}

.nav-border {
    border-left: 4px solid #90a4ae;
}

.nav-item:focus , .nav-item:active {
    border-left: 4px solid #90a4ae;
}

.navitem-text {
    color: #607d8b;
    font-size: 16px;
    margin-left: 5px;
}

.item {
    height: 200px;
    width: 300px;
    margin: 40px;
}

/* Popular posts */

.popular-back {
    height: 300px;
    width: 65%;
    position: relative;
    background-color: rgba(255,255,255,0.43);
    border-radius: 5px;
    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.02);
}

.popular-container {
    position: absolute;
    top: -20px;
    left: -20px;
    height: 300px;
    width: 115%;
    background-color: white;
    z-index: 2;
    border-radius: 5px;
    box-shadow: 0 3px 25px 0 rgba(0,0,0,0.08);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.popular-img {
    height: 151px;
    width: 100%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background: #445a64;
}

.popular-title {
    margin-left: 15px;
    color: #263238;
    margin-top: -10px;
    opacity: 0;
    animation: pop-appear 300ms ease-in-out 1 forwards;
}

.popular-desc {
    margin-left: 15px;
    color: #90a4ae;
    font-size: 14px;
    padding-right: 7px;
    margin-top: 5px;
    opacity: 0;
    animation: pop-appear 300ms ease-in-out 1 forwards;
    animation-delay: 100ms;
}

@keyframes pop-appear {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.pop-next-container {
    height: 30px;
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.next-pop-button {
    margin-right: 19px;
    background-color: white;
    font-size: 16px;
    color: rgb(33, 150, 243);
    border: 0px;
    margin-top: 5px;
}

.next-pop-button:hover {
    cursor: pointer;
}

.next-pop-button:focus {
    outline:none;
}

.suggestion-container {
    min-height: 290px;
    width: 71%;
    background-color: white;
    margin-top: 25px;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding-left: 13px;
    margin-right: 4px;
}

.sugg-title {
    height: 50px;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 15px;
    color: #263238;
}

.sugg-box {
    height: 55px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    margin: 10px 0px;
}

.sugg-avatar {
    height: 100%;
    width: 25%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sugg-img {
    height: 52px;
    width: 52px;
    border-radius: 50%;
    background-color: #607d8b;
}

.sugg-desc {
    height: 100%;
    width: 55%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding-left: 8px;
    font-size: 17px;
}

.sugg-add {
    height: 100%;
    width: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-right: 10px;
}

.add-sugg {
    height: 25px;
    width: 25px;
    border-radius: 50%;
    border: 0px;
    background-color: #eceff1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.add-sugg:hover {
    cursor: pointer;
}

/* Upload box */

.upload-box {
    height: 150px;
    width: 85%;
    margin-top: -20px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background-color: #cfd8dc;
}

.upload-textarea {
    background-color: inherit;
    padding-left: 15px;
    padding-top: 15px;
    border: 0px;
    font-size: 17px;
    resize: none;
    width: 90%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    height: 60%;
    color: #263238;
}

.upload-textarea:focus {
    outline: none;
}

.ub-low {
    height: 15%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: relative;
}

.upload-icons-tab {
    width: 20%;
    height: 100%;
    position: absolute;
    left: 0px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.upload-button {
    position: absolute;
    right: 20px;
    top: -10px;
    height: 35px;
    width: 100px;
    border-radius: 5px;
    border: 0px;
    background-color: rgb(33, 150, 243);
    font-size: 16px;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 3px;
}

.upload-button:hover {
    cursor: pointer;
}

/* Posts */

.post-container {
    width: 85%;
    min-height: 200px;
}

.post-box {
    width: 100%;
    min-height: 200px;
    background-color: white;
    padding-top: 20px;
}

.post-by-info {
    height: 60px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.post-by-img {
    height: 100%;
    width: 13%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.post-img {
    height: 50px;
    width: 50px;
    border-radius: 50%;
}

.post-by-desc {
    height: 100%;
    width: 57%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.post-by-user {
    font-size: 16px;
    margin-top: 7px;
    margin-left: 5px;
    color: #263238;
}

.post-by-role {
    color: #90a4ae;
    font-size: 14px;
    margin-left: 5px;
}

.post-timestamp {
    height: 100%;
    width: 30%;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
}

.p-ts {
    color: #90a4ae;
    font-size: 14px;
    margin-top: 7px;
    margin-left: 7px;
}

.post-desc {
    max-width: 100%;
    min-height: 70px;
    padding: 15px;
    margin-top: -5px;
    color: #263238;
    font-size: 16px;
}

.post-image {
    height: auto;
    max-width: 100%;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: -20px;
}

.p-img {
    width: 98%;
    height: auto;
}

.post-likes-container {
    height: 50px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.like-button {
    margin-left: 15px;
    border: 0px;
    background-color: white;
}

.comment-button {
    margin-left: 20px;
    border: 0px;
    background-color: white;
}

/* Login Component */

.test-form {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #eceff1;
}

.login-container {
    height: 70%;
    width: 70%;
    background-color: white;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.lc-left {
    height: 100%;
    width: 49%;
    border-right: 2px solid lightgrey;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.lg-title {
    font-size: 50px;
    color: rgb(33, 150, 243);
}

.lc-right {
    height: 100%;
    width: 49%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.login-form {
    height: 70%;
    width: 80%;
    border: 1px solid grey;
    border-radius: 7px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.standard-input {
    height: 40px;
    width: 270px;
    margin: 20px 0px;
    padding-left: 12px;
}

.standard-button {
    height: 40px;
    width: 290px;
    margin-top: 30px;
    margin-bottom: 30px;
    border-radius: 3px;
    background: greenyellow;
}

/* Signup Container */

.signup-container {
    height: 90%;
    width: 80%;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.su-con {
    height: 80%;
    width: 80%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.form-one {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

